2004-01-06  Seth Robertson  <seth@buscemi.sysdetect.com>

	* lib/b_run.c (bk_run_enqueue): We can get trapped in select with
	an event ready to fire, but select being unaware.  Resolve.

2004-01-05  Seth Robertson  <seth@not.baka.org>

	* lib/b_thread.c (bk_thread_continue): Const incorrect.

	* lib/b_strconv.c (bk_string_demagnify): Not everyone has FP_NAN
	defined.  If not, then return sqrt(-1) (i.e. NaN).

	* include/libbk_include.h: Include sys/ioctl.h and sys/filio.h when
	appropriate.

	* lib/b_ioh.c (bk_ioh_fdctl): Signed/unsigned error.  Cast.

	* lib/b_exec.c: Make finding declaration of openpty portable

2003-12-29  Alexander Dupuy  <dupuy@sysdetect.com>

	* src/bttcp.c (relay_finish): new gcc allows inline declaration of
	newfd variable, a la C++, but old gcc [or ANSI C] does not

2003-12-29  Seth Robertson  <seth@buscemi.sysdetect.com>

	* lib/b_exec.c (bk_pipe_to_process): openpty for pty requirements,
	allow stderr to dup to stdout.

	* lib/Makefile (LT_LDLIBS): Additional library requirements.

	* lib/b_relay.c (bk_relay_iohhandler): Allow user callback to
	modify outgoing buffer, not discarding buffer.
	(bk_relay_iohhandler): Carpe Data -- seize the data instead of
	copying it when possible.

	* src/bttcp.c (relay_finish): Implement transmit limits.
	(main): Allow major numeric arguments to use kKmM etc notation.

	* lib/b_strconv.c (bk_string_demagnify): Go in other direction
	(from 1.5k -> 1530)

2003-12-28  Seth Robertson  <seth@buscemi.sysdetect.com>

	* src/bttcp.c: Raise default bttcp ioh buffer size.  Implement
	keepalives, --file-in/out/io instead of stdio.

2003-12-25  Seth Robertson  <seth@now.baka.org>

	* lib/b_strconv.c (bk_string_magnitude): Write a cute little
	routine to print a number in a magnitude-sense.  E.g. 1534 -> 1.5k
	Works in powers of 2 and 10, variable precision, and with a range of
	(-10^27+1 to 10^27-1) or (-2^90+1 to 2^90-1)

	* include/libbk.h (struct bk_relay_ioh_stats): Create statistics
	for bk_relay accounting.
