@@ -1,3 +1,9 @@
+2004-01-07  Seth Robertson  <seth@startide.sysdetect.com>
+
+	* lib/b_error.c (be_error_output): IF BK_ERROR_FLAG_MORE_FUN,
+	print function stack track for every error.  Preferentially to
+	file output (syslog is avoided unless necessary).
+
 2004-01-06  Seth Robertson  <seth@buscemi.sysdetect.com>
 
 	* lib/b_run.c (bk_run_enqueue): We can get trapped in select with
